@@ -1,16 +1,23 @@
+import com.diffplug.gradle.spotless.SpotlessExtension
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
   kotlin("jvm") // for `src/generator/kotlin`
-  pklAllProjects
-  pklJavaLibrary
-  pklPublishLibrary
-  pklNativeBuild
+  id("pklAllProjects")
+  id("pklJavaLibrary")
+  id("pklPublishLibrary")
+  id("pklNativeBuild")
   antlr
   idea
 }
 
+description = "Pkl core language"
+
+val moduleName = "pkl.core"
 val generatorSourceSet = sourceSets.register("generator")
+val extraJavacArgs = listOf(
+  "--add-reads=$moduleName=ALL-UNNAMED",
+)
 
 sourceSets {
   main {
@@ -22,10 +29,11 @@ sourceSets {
 
 idea {
   module {
-    // mark src/main/antlr as source dir,
-    // and generated/antlr as generated source dir
-    sourceDirs = sourceDirs + files("src/main/antlr", "generated/antlr")
-    generatedSourceDirs = generatedSourceDirs + files("generated/antlr")
+    // mark src/main/antlr as source dir
+    // mark generated/antlr as generated source dir
+    // mark generated/truffle as generated source dir
+    sourceDirs = sourceDirs + files("src/main/antlr", "generated/antlr", "generated/truffle")
+    generatedSourceDirs = generatedSourceDirs + files("generated/antlr", "generated/truffle")
   }
 }
 
@@ -44,23 +52,21 @@ dependencies {
 
   compileOnly(libs.jsr305)
   // pkl-core implements pkl-executor's ExecutorSpi, but the SPI doesn't ship with pkl-core
-  compileOnly(project(":pkl-executor"))
+  api(projects.pklExecutor)
 
-  implementation(libs.antlrRuntime)
+  implementation(files(rootProject.layout.projectDirectory.file("lib/antlr4-annotations-4.10.0-SNAPSHOT.jar")))
+  implementation(files(rootProject.layout.projectDirectory.file("lib/antlr4-runtime-4.10.0-SNAPSHOT.jar")))
   implementation(libs.truffleApi)
   implementation(libs.graalSdk)
 
-  implementation(libs.paguro) {
-    exclude(group = "org.jetbrains", module = "annotations")
-  }
-
+  implementation(files(rootProject.layout.projectDirectory.file("lib/paguro-3.11.0.jar")))
   implementation(libs.snakeYaml)
 
-  testImplementation(project(":pkl-commons-test"))
+  testImplementation(projects.pklCommonsTest)
 
   add("generatorImplementation", libs.javaPoet)
   add("generatorImplementation", libs.truffleApi)
-  add("generatorImplementation", libs.kotlinStdLib)
+  add("generatorImplementation", libs.kotlinStdlib)
 
   javaExecutableConfiguration(project(":pkl-cli", "javaExecutable"))
 }
@@ -69,12 +75,12 @@ publishing {
   publications {
     named<MavenPublication>("library") {
       pom {
-        url.set("https://github.com/apple/pkl/tree/main/pkl-core")
-        description.set("""
+        url = "https://github.com/apple/pkl/tree/main/pkl-core"
+        description = """
           Core implementation of the Pkl configuration language.
           Includes Java APIs for embedding the language into JVM applications,
           and for building libraries and tools on top of the language.
-        """.trimIndent())
+        """.trimIndent()
       }
     }
   }
@@ -96,10 +102,24 @@ tasks.generateGrammarSource {
 
 tasks.compileJava {
   dependsOn(tasks.generateGrammarSource)
+
+  options.compilerArgumentProviders.add(CommandLineArgumentProvider {
+    extraJavacArgs
+  })
 }
 
 tasks.sourcesJar {
   dependsOn(tasks.generateGrammarSource)
+}
+
+listOf(
+  tasks.jar,
+  tasks.javadocJar,
+  tasks.sourcesJar,
+).forEach {
+  it {
+    outputs.cacheIf { true }
+  }
 }
 
 tasks.generateTestGrammarSource {
@@ -128,7 +148,7 @@ tasks.processResources {
       include("*.pkl") 
       exclude("doc-package-info.pkl")
     }.map { "pkl:" + it.nameWithoutExtension } 
-      .sortedBy { it.toLowerCase() }
+      .sortedBy { it.lowercase() }
     
     filter<ReplaceTokens>("tokens" to mapOf(
         "version" to buildInfo.pklVersion,
@@ -145,7 +165,7 @@ tasks.processResources {
 }
 
 tasks.compileJava {
-  options.generatedSourceOutputDirectory.set(file("generated/truffle"))
+  options.generatedSourceOutputDirectory = file("generated/truffle")
 }
 
 tasks.compileKotlin {
@@ -153,6 +173,8 @@ tasks.compileKotlin {
 }
 
 tasks.test {
+  jvmArgs(extraJavacArgs)
+
   inputs.dir("src/test/files/LanguageSnippetTests/input")
   inputs.dir("src/test/files/LanguageSnippetTests/input-helper")
   inputs.dir("src/test/files/LanguageSnippetTests/output")
@@ -281,12 +303,12 @@ tasks.testNative {
 
 tasks.clean {
   delete("generated/")
-  delete("$buildDir/test-packages")
+  delete(layout.buildDirectory.dir("test-packages"))
 }
 
 spotless {
   antlr4 {
-    licenseHeaderFile(rootProject.file("buildSrc/src/main/resources/license-header.star-block.txt"))
+    licenseHeaderFile(rootProject.file("build-logic/src/main/resources/license-header.star-block.txt"))
     target(files("src/main/antlr/PklParser.g4", "src/main/antlr/PklLexer.g4"))
   }
 }
